--- a/invest/templates/invest/invest_list.html
+++ b/invest/templates/invest/invest_list.html
@@ -3,18 +3,22 @@
 
 {% block content %}   
 
-    <div style="text-align:left;">
-        <h1>투자비 전산화</h1>
+    <div style="text-align:left; padding-top: 15px;">
+        <a href="{% url 'invest:invest_list' %}" style="text-decoration:none;"><h3>투자비 전산화</h3></a>
     </div>
 
     <div style="text-align:right;">
         <hr />
-        <button id="excel" class="btn btn-primary">엑셀 다운로드</button>
+        <button id="view" class="btn btn-primary">조회</button>&nbsp;
+        <button id="excel" class="btn btn-primary">엑셀 다운로드</button>&nbsp;
+        <button id="email" class="btn btn-primary" data-toggle="modal" data-target="#contact-modal">이메일 전달</button>&nbsp;
         <button id="save" class="btn btn-primary">저장</button>
+        <p>&nbsp;</p>
     </div>
 
-    <div id="example" style="width:1600px; max-width:1600px; height: 500px; overflow: hidden"></div>
+    <div id="example" style="width:1600px; max-width:1600px; height: 400px; overflow: hidden"></div>
         <script>
+            
             var container = document.getElementById('example');
             
             var data = [                    
@@ -24,19 +28,24 @@
                         col_A:'{{invest.col_A}}', col_B:'{{invest.col_B}}', col_C:'{{invest.col_C}}', col_D:'{{invest.col_D}}',
                         col_E:'{{invest.col_E}}', col_F:'{{invest.col_F}}', col_G:'{{invest.col_G}}', col_H:'{{invest.col_H}}',
                         col_I:'{{invest.col_I}}', col_J:'{{invest.col_J}}', col_K:'{{invest.col_K}}', col_L:'{{invest.col_L}}',
-                        col_M:'{{invest.col_M}}', col_N:'{{invest.col_N}}', col_O:'{{invest.col_O}}',
-                        update_date:'{{invest.updated_at}}'
+                        col_M:'{{invest.col_M}}', col_N:'{{invest.col_N}}', col_O:'{{invest.col_O}}'
                     },
                 {% endfor %}
             ];
             
             var column = [
                 {% for column in column_list %}
-                    {data:'{{column.col_data}}', title:'{{column.col_title}}'},                
+                    {data:'{{column.col_data}}', title:'{{column.col_title}}', show:'{{column.col_show}}'},                
                 {% endfor %}
-                {data:'update_date', title:'갱신일'}
             ];
-    
+            
+            var hidden_col = [];
+            for (var i=0 ; i < (column.length) ; i++) {
+                if (column[i]['show']==0) {                    
+                    hidden_col.push(i);
+                }
+            };
+            
             var settings = {
                     manualColumnMove: true,
                     manualRowMove: true,
@@ -50,12 +59,22 @@
                     dropdownMenu: true,
                     manualColumnResize: true,
                     manualRowResize: true,
-                    minSpareRows: 5,
+                    minSpareRows: 3,
+                    minSpareCols: 3,
+                    contextMenu: true,
+                    hiddenColumns: {
+                      columns: hidden_col,
+                      indicators: true
+                    },
                     licenseKey: 'non-commercial-and-evaluation'
             };  
 
-            var hot = new Handsontable(container, settings);            
+            var hot = new Handsontable(container, settings);
             
+            $('#view').click(function(){
+                window.location.replace("{% url 'invest:invest_list' %}"); 
+            });
+           
             $('#save').click(function(){
                         
                         var raw_grid_data = hot.getData();                        
@@ -72,8 +91,13 @@
                             col_data_simple.push(col_temp[0]['data']);
                             col_data_obj['title'] = col_header[i];
                             col_data_obj['data'] = col_temp[0]['data'];
-                            col_data_full.push(col_data_obj); 
-                        };    
+                            if (hot.getColWidth(i)==0.1) {
+                                  col_data_obj['show'] = 0;
+                            } else {
+                                  col_data_obj['show'] = 1;
+                            };                            
+                            col_data_full.push(col_data_obj);                            
+                        };
                 
                         for (var i=0 ; i< raw_grid_data.length ; i++) {                            
                             if (!hot.isEmptyRow(i)) {
@@ -85,11 +109,14 @@
                             }
                         };
                         
-                        var url = "{% url 'invest:invest_new' %}";                
-                        $.post(url, JSON.stringify(grid_send))
-                            .done(function(obj){
-                                console.log(obj);
-                                window.location.replace("{% url 'invest:invest_list' %}");
+                        var url_invest = "{% url 'invest:invest_new' %}";
+                        var url_column = "{% url 'invest:invest_new_column' %}";                
+                        $.post(url_invest, JSON.stringify(grid_send))
+                            .done(function(obj1){
+                                $.post(url_column, JSON.stringify(col_data_full))
+                                    .done(function(obj2){
+                                        window.location.replace("{% url 'invest:invest_list' %}");      
+                                })                                
                             })
                             .fail(function(xhr,textStatus,error){
                                alert('failed : '+error);
@@ -97,6 +124,58 @@
                         
             });
             
+            
+            var url_email = "{% url 'invest:invest_new_email' %}";
+            $(document).ready(function(){	
+                $("#contactForm").submit(function(event){
+                    var serial_send = {};
+                    var serial_form = $("#contactForm").serializeArray();
+                    serial_send['to'] = serial_form.filter(function(item){ return item.name == 'to'; })[0]['value'];
+                    serial_send['subject_text'] = serial_form.filter(function(item){ return item.name == 'subject_text'; })[0]['value'];
+                    serial_send['body_text'] = serial_form.filter(function(item){ return item.name == 'body_text'; })[0]['value'];
+                    $.post(url_email, JSON.stringify(serial_send))
+                            .done(function(obj){
+                                window.location.replace("{% url 'invest:invest_list' %}");                                                               
+                            })
+                            .fail(function(xhr,textStatus,error){
+                                alert('failed : '+error);
+                            })
+                            .always(function(){
+                                window.location.replace("{% url 'invest:invest_list' %}");                                                               
+                            })
+                });
+            });
+            
         </script>
+    </div>
+
+    <div id="contact-modal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content" style="padding: 25px; ">
+                    <div class="modal-header">
+                        <h3 style="text-align:left;">이메일 전달</h3>
+                        <a class="close" data-dismiss="modal" style="text-align:right;">×</a>                        
+                    </div>
+                        <form id="contactForm" name="contact" role="form" method="post">{% csrf_token %}                                                        
+                                <div class="form-group" style="padding-top: 15px;">
+                                    <label for="exampleInputEmail1">이메일 주소</label>
+                                    <input type="email" name="to" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="이메일 주소">
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-form-label" for="inputDefault">제목</label>
+                                    <input type="text" name="subject_text" class="form-control" placeholder="이메일 제목" id="inputDefault">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleTextarea">본문</label>
+                                    <textarea class="form-control" id="exampleTextarea" name="body_text" rows="3"></textarea>
+                                </div>
+                                <div class="modal-footer">                                    
+                                    <input type="submit" class="btn btn-primary" id="submit">
+                                </div>
+                        </form>
+                </div>
+            </div>
+    </div>
+
 
 {% endblock %}
